2008-08-25  David Bateman  <dbateman@free.fr>

	* graphics.cc (void gh_manager::do_execute_callback 
	(const graphics_handle&, const octave_value&, const
	octave_value&)): Don't pass the function handle as first arg of
	property listener functions

	* graphics.h.in (class base_properties): Add functor for caseless
	string comparison. Use it in the property map, so that user added
	properties are found in a case insensitive fashion.

2008-08-22  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_table::inherit): Pass reference to symbol table
	to do_inherit instead of scope.
	(symbol_table::do_inherit): First arg is now reference to
	symbol_table, not scope id.  Insert all variables from donor scope.

2008-08-21  Thomas Treichl  <Thomas.Treichl@gmx.net>
	
	* mappers.cc: Increase test script tolerance.

2008-08-20  John W. Eaton  <jwe@octave.org>

	* help.cc (builtin_help): Go to next symbol name on error.
	(do_type, do_which): Omit separate path search for files.
	(help_from_symbol_table): Only insert Texinfo markup if it looks
	like the help message is already in Texinfo.

2008-08-19  David Bateman  <dbateman@free.fr>

	* load-path.cc (load-path::do_find_dir (const std:string&) const)):
	Method to find a directory on the load-path corresponding to the
	argument.
	* load-path.h (load-path::do_find_dir (const std:string&) const),
	load-path::find_dir (const std::string&) const): New methods.
	* utils.cc (std::string contents_file_in_path (const std::string&)):
	New function.
	* utils.h  (std::string contents_file_in_path (const std::string&)): 
	Declare it.
	* help.cc (static bool raw_help_from_file (const std::string&,
	std::string&, std::string&, bool&)): Also check is requested
	argument is a directory and contains the file Contents.m.

	* OPERATORS/op-int-conv.cc (DEFINTCONVFN): New macro that warn
	for integer conversion issues. Use it to replace DEFCONVFN.
	* OPERATORS/op-int.h (DEFINTBINOP_OP, DEFINTNDBINOP_OP,